--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Static
 
 {{$NEXT}}
+          - Mark Build script as executable
 
 0.003     2023-11-07 18:05:51+01:00 Europe/Brussels
           - Regenerate configure requirements
