--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for CPAN-Static
 
 {{$NEXT}}
+          - Check for static_version in configure
 
 0.004     2023-11-18 15:05:43+01:00 Europe/Brussels
           - Mark Build script as executable
